<resources>
    <string name="app_name">VelibParis</string>
    <string name="search">Rechercher</string>
    <string name="searchHint">Rechercher une station spécifique</string>
    <string name="mainTitle">Liste des stations</string>
    <string name="memberList">Liste des membres du groupe</string>
    <string name="titleGroup">Details du groupe</string>
    <string name="detail">Details</string>
    <string name="wida">Benjamin Widaski</string>
    <string name="virso">Thibault Virsolvy</string>
    <string name="status">Status :</string>
    <string name="bike_stands_details">Nombre de places dans la station :</string>
    <string name="available_bike_stands">Nombre de places disponibles :</string>
    <string name="address_details">Addresse :</string>
    <string name="last_update_details">Dernière mise à jour :</string>
    <string name="share_detail">Partager la station</string>
    <string name="send_to">Partager la station</string>
    <string name="no_internet">Impossible de se connecter à internet</string>
    <string name="refresh_action">Rafrachir la liste des stationsd</string>
    <string name="title_activity_maps">Map</string>
</resources>
